update readme file

--- a/nature-template.tex
+++ b/nature-template.tex
@@ -41,7 +41,7 @@
 \input{methods.tex}
 
 
-{\bfseries References}
+\noindent{\bfseries References}\setlength{\parskip}{12pt}%
 
 \bibliography{mybib}
 %Articles are restricted to 50 references, Letters to 30. No compound references -- only one source per reference.
