--- a/suppmat.tex
+++ b/suppmat.tex
@@ -1,5 +1,6 @@
 \newpage
-\textbf{\LARGE Supplementary Information}
+
+\noindent{\bfseries \LARGE Supplementary Information}\setlength{\parskip}{12pt}%
 
 %reset figure counter
 %\processdelayedfloats
